feat: add new typography

--- a/app.json
+++ b/app.json
@@ -64,7 +64,12 @@
           }
         }
       ],
-      "expo-font"
+      [
+        "expo-font",
+        {
+          "fonts": ["./assets/fonts/PoetsenOne-Regular.ttf"]
+        }
+      ]
     ],
     "experiments": {
       "tsconfigPaths": true
