--- a/package.json
+++ b/package.json
@@ -38,9 +38,9 @@
     "@shopify/flash-list": "^1.6.3",
     "apisauce": "3.0.1",
     "date-fns": "^3.6.0",
-    "expo": "~51.0.4",
+    "expo": "~51.0.8",
     "expo-build-properties": "~0.12.1",
-    "expo-dev-client": "~4.0.13",
+    "expo-dev-client": "~4.0.14",
     "expo-font": "~12.0.5",
     "expo-linking": "~6.3.1",
     "expo-localization": "~15.0.3",
@@ -54,6 +54,7 @@
     "react-dom": "18.2.0",
     "react-native": "0.74.1",
     "react-native-gesture-handler": "~2.16.1",
+    "react-native-ide": "^0.0.2",
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "3.31.1",
@@ -86,7 +87,7 @@
     "eslint-plugin-react-native": "4.0.0",
     "eslint-plugin-reactotron": "^0.1.2",
     "jest": "^29.2.1",
-    "jest-expo": "~51.0.1",
+    "jest-expo": "~51.0.2",
     "patch-package": "6.4.7",
     "postinstall-prepare": "1.0.1",
     "prettier": "2.8.8",
