--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "web": "npx expo start --web",
     "bundle:web": "npx expo export --platform web",
     "serve:web": "npx server dist",
-    "prebuild:clean": "npx expo prebuild --clean"
+    "prebuild:clean": "npx expo prebuild --clean",
+    "prepare": "husky"
   },
   "dependencies": {
     "@expo-google-fonts/quicksand": "^0.2.3",
@@ -37,14 +38,14 @@
     "@react-navigation/native-stack": "^6.0.2",
     "@shopify/flash-list": "^1.6.3",
     "apisauce": "3.0.1",
-    "date-fns": "^3.6.0",
-    "expo": "~51.0.8",
-    "expo-build-properties": "~0.12.1",
-    "expo-dev-client": "~4.0.14",
-    "expo-font": "~12.0.5",
+    "date-fns": "^2.30.0",
+    "expo": "~51.0.14",
+    "expo-build-properties": "~0.12.3",
+    "expo-dev-client": "~4.0.18",
+    "expo-font": "~12.0.7",
     "expo-linking": "~6.3.1",
     "expo-localization": "~15.0.3",
-    "expo-splash-screen": "~0.27.4",
+    "expo-splash-screen": "~0.27.5",
     "expo-status-bar": "~1.12.1",
     "i18n-js": "3.9.2",
     "mobx": "6.10.2",
@@ -52,7 +53,7 @@
     "mobx-state-tree": "5.3.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.74.1",
+    "react-native": "0.74.2",
     "react-native-gesture-handler": "~2.16.1",
     "react-native-ide": "^0.0.2",
     "react-native-reanimated": "~3.10.1",
@@ -86,8 +87,10 @@
     "eslint-plugin-react": "7.30.0",
     "eslint-plugin-react-native": "4.0.0",
     "eslint-plugin-reactotron": "^0.1.2",
+    "husky": "^9.0.11",
     "jest": "^29.2.1",
     "jest-expo": "~51.0.2",
+    "lint-staged": "^15.2.7",
     "patch-package": "6.4.7",
     "postinstall-prepare": "1.0.1",
     "prettier": "2.8.8",
