--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "expo-splash-screen": "~0.27.5",
     "expo-status-bar": "~1.12.1",
     "i18n-js": "3.9.2",
+    "jotai": "^2.8.3",
     "mobx": "6.10.2",
     "mobx-react-lite": "4.0.5",
     "mobx-state-tree": "5.3.0",
