--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@react-navigation/native": "^6.0.2",
     "@react-navigation/native-stack": "^6.0.2",
     "@shopify/flash-list": "^1.6.3",
+    "@shopify/react-native-skia": "1.2.3",
     "apisauce": "3.0.1",
     "date-fns": "^2.30.0",
     "expo": "~51.0.14",
@@ -48,6 +49,7 @@
     "expo-splash-screen": "~0.27.5",
     "expo-status-bar": "~1.12.1",
     "i18n-js": "3.9.2",
+    "jotai": "^2.8.3",
     "mobx": "6.10.2",
     "mobx-react-lite": "4.0.5",
     "mobx-state-tree": "5.3.0",
